--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,45 @@ header,
 footer {
   background-color: #282c34;
   color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   padding: 1rem;
+
+}
+
+.nav-item {
+  color: white;
+  text-decoration: none;
+  background: #000;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+h1 {
+  margin: 40px;
+}
+
+.contatos {
+  margin: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.contate-me,
+.contate-me a {
+  padding: 10px;
+  border-radius: 8px;
+  background: green;
+  color: white;
+  border: 0;
 }
 
 form {
@@ -22,4 +60,10 @@ input {
   border: 1px solid #ddd;
   margin: 1rem;
   padding: 1rem;
+}
+
+* {
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
